--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "nock": "^13.5.4"
   }
